--- a/helloWorld.html
+++ b/helloWorld.html
@@ -6,6 +6,16 @@
 		</title>
 		<meta charset="utf-8">
 	</head>
+	<style type="text/css">
+		h1{
+			positon: absolute;
+			top: 20%;
+			width: 100%;
+			font-family: Helvetica;
+			font-size: 100;
+			text-align: center;
+		}
+	</style>
 	<body>
 		<h1>Hello world!</h1>
 
